--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
   "externally_connectable": {
     "matches": [
       "*://localhost/*",
-      "*://yeschef.ai/*"
+      "*://yeschef.ai/*",
+      "*://yes-chef-web-f53cec2c35ec.herokuapp.com/*"
     ]
   }
 }
